examples/test/testpolicy16614.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16614
  namespace: namespace246
spec:
  podSelector:
    matchLabels:
      key0: value25
      key22: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value4
          key9: value4
          key42: value11
      podSelector:
        matchLabels:
          key49: value0
